# wagtailforms

./: .coveragerc  .dockerignore  .gitignore  CHANGELOG.rst  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.rst  docker-compose.yml  docker-entrypoint.sh  package.json  pyproject.toml  tox.ini
.github/workflows/: nightly-tests.yml  python-test-old.yml  python-test.yml
docs/: Makefile  README.md  advanced.rst  conf.py  fields.rst  hooks.rst  index.rst  installation.rst  settings.rst  submission.rst  templates.rst  usage.rst
example/: models.py  settings.py  wagtailforms_fields.py  wagtailforms_hooks.py
example/migrations/: 0001_initial.py
tests/: settings.py  test_case.py  test_urls.py  test_utils.py
tests/blocks/: test_form_block.py  test_form_chooser_block.py  test_info_block.py
tests/fields/: test_base_field.py  test_fields.py  test_hook_select_field.py  test_registering.py  test_streamfield.py
tests/fixtures/: test.json
tests/forms/: test_form_builder.py
tests/hooks/: test_process_form.py  test_registering.py  test_save_form_submission_data.py
tests/management/: test_prunesubmissions.py
tests/models/: __init__.py  test_form.py  test_form_settings.py  test_form_submission.py  test_form_submission_file.py
tests/serializers/: test_form_submission.py
tests/templatetags/: test_form.py  test_url_replace.py
tests/views/: test_admin_list.py  test_advanced.py  test_copy.py  test_delete.py  (+1 more)
wagtailforms/: blocks.py  conf.py  fields.py  forms.py  hooks.py  streamfield.py  urls.py  wagtail_hooks.py  wagtailforms_fields.py  wagtailforms_hooks.py
(+24 files in other folders)
